@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-313
+CSN=CSN-platforms-314
 Dependencies=hasim/HEAD
